--- a/installers/Linux/configFile.json
+++ b/installers/Linux/configFile.json
@@ -2,12 +2,13 @@
     "name": "ADB Wireless Connect",
     "qifOut": "ADB-Wireless-Connect-Linux-Installer.run",
     "bin": "../../builds/Linux/release/adb-wireless-connect/adb-wireless-connect",
+    "targetDir": "./adb-wireless-connect",
     "icon": "./icons/adb-wireless-connect.png",
     "qif": "template",
     "extraData": [
-            "./lib/libicudata.so.56",
-            "./lib/libicui18n.so.56",
-            "./lib/libicuuc.so.56"
+            "/opt/Qt/6.2.2/gcc_64/lib/libicudata.so.56",
+            "/opt/Qt/6.2.2/gcc_64/lib/libicui18n.so.56",
+            "/opt/Qt/6.2.2/gcc_64/lib/libicuuc.so.56"
         ]
 
 }
